--- a/app/src/main/res/layout/item_block_time.xml
+++ b/app/src/main/res/layout/item_block_time.xml
@@ -11,7 +11,8 @@
     android:layout_width="match_parent"
     android:layout_height="40dp">
 
-    <TextView
+    <com.puzi.puzi.ui.textview.NotoTextView
+      app:fontWeight="light"
       android:layout_marginLeft="16dp"
       android:layout_gravity="center_vertical"
       android:layout_width="match_parent"
