--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -11,4 +11,16 @@
       <enum name="black" value="6" />
     </attr>
   </declare-styleable>
+
+  <declare-styleable name="NotoButton">
+    <attr name="fontWeight" format="enum">
+      <enum name="thin" value="0" />
+      <enum name="light" value="1" />
+      <enum name="demilight" value="2" />
+      <enum name="regular" value="3" />
+      <enum name="medium" value="4" />
+      <enum name="bold" value="5" />
+      <enum name="black" value="6" />
+    </attr>
+  </declare-styleable>
 </resources>
