--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -5,12 +5,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <LinearLayout
-    android:layout_weight="1"
-    android:layout_width="0dp"
-    android:layout_height="93dp"/>
-
   <FrameLayout
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     android:orientation="horizontal"
     android:layout_width="328dp"
     android:layout_height="93dp">
@@ -67,10 +66,5 @@
     </LinearLayout>
 
   </FrameLayout>
-
-  <LinearLayout
-    android:layout_weight="1"
-    android:layout_width="0dp"
-    android:layout_height="93dp"/>
 
 </LinearLayout>
