--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -18,12 +18,133 @@
     android:visibility="gone"
     widget:dividerWidth="1dp"/>
 
-  <ListView
-    android:id="@+id/lv_channel"
+  <ScrollView
+    android:id="@+id/sv_channel"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:divider="@color/colorWhite"
-    android:background="@color/colorWhite"
-    android:dividerHeight="10dp"/>
+    android:layout_height="match_parent">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
+      <GridView
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:id="@+id/gv_channel"
+        android:numColumns="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"/>
+
+      <FrameLayout
+        android:id="@+id/fl_channel_more_channel_container"
+        android:background="@color/colorWhite"
+        android:layout_width="match_parent"
+        android:layout_height="38dp">
+
+        <LinearLayout
+          android:layout_gravity="center"
+          android:orientation="horizontal"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <ImageView
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/more_list"/>
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            android:layout_gravity="center_vertical"
+            app:fontWeight="demilight"
+            android:textSize="14sp"
+            android:textColor="#6d6d6d"
+            android:text="더보기"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+          android:background="#eeeeee"
+          android:layout_width="match_parent"
+          android:layout_height="1dp"/>
+
+        <Button
+          android:background="@drawable/ripple_basic"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/btn_channel_more_channel"/>
+
+      </FrameLayout>
+
+      <LinearLayout
+        android:background="#f4f4f4"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+      <ListView
+        android:id="@+id/lv_editorspage"
+        android:divider="#00000000"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"/>
+
+      <LinearLayout
+        android:background="#eeeeee"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
+      <FrameLayout
+        android:id="@+id/fl_channel_more_editorspage_container"
+        android:background="@color/colorWhite"
+        android:layout_width="match_parent"
+        android:layout_height="38dp">
+
+        <LinearLayout
+          android:layout_gravity="center"
+          android:orientation="horizontal"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+          <ImageView
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/more_list"
+            android:id="@+id/imageView"/>
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            android:layout_gravity="center_vertical"
+            app:fontWeight="demilight"
+            android:textSize="14sp"
+            android:textColor="#6d6d6d"
+            android:text="더보기"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <Button
+          android:background="@drawable/ripple_basic"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/btn_channel_more_editorspage"/>
+
+      </FrameLayout>
+
+      <LinearLayout
+        android:background="#f4f4f4"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+    </LinearLayout>
+
+  </ScrollView>
 
 </LinearLayout>
