--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -8,16 +8,17 @@
               android:layout_height="match_parent">
 
   <LinearLayout
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     android:orientation="horizontal"
     android:padding="0dp"
     android:layout_marginTop="7dp"
     android:layout_marginBottom="7dp"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <LinearLayout
-      android:layout_weight="1"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="match_parent"/>
 
     <LinearLayout
@@ -39,6 +40,7 @@
         android:background="#00000000"/>
 
       <Button
+        android:focusable ="false"
         android:text="title"
         android:textSize="10sp"
         android:textColor="#666666"
@@ -53,6 +55,7 @@
         android:id="@+id/tv_item_channel_company_name_1"/>
 
       <Button
+        android:focusable ="false"
         android:text="title"
         android:textSize="15sp"
         android:textColor="#333333"
@@ -122,117 +125,6 @@
       </LinearLayout>
 
     </LinearLayout>
-
-    <LinearLayout
-      android:layout_width="16dp"
-      android:layout_height="match_parent"/>
-
-    <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="156dp"
-      android:layout_height="match_parent">
-
-      <com.joooonho.SelectableRoundedImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:sriv_right_top_corner_radius="5dp"
-        app:sriv_right_bottom_corner_radius="5dp"
-        app:sriv_left_top_corner_radius="5dp"
-        app:sriv_left_bottom_corner_radius="5dp"
-        app:sriv_oval="false"
-        android:layout_width="match_parent"
-        android:layout_height="106dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/ibtn_item_channel_image_2"
-        android:background="#00000000"/>
-
-      <Button
-        android:text="title"
-        android:textSize="10sp"
-        android:textColor="#666666"
-        android:layout_marginTop="1dp"
-        android:typeface="sans"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:background="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:gravity="left"
-        android:id="@+id/tv_item_channel_company_name_2"/>
-
-      <Button
-        android:text="title"
-        android:textSize="15sp"
-        android:textColor="#333333"
-        android:layout_marginTop="3dp"
-        android:typeface="sans"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:background="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:gravity="left"
-        android:id="@+id/tv_item_channel_title_2"/>
-
-      <LinearLayout
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:layout_weight="1">
-
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/star"
-          android:id="@+id/iv_item_channel_company_star2_1"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/star"
-          android:id="@+id/iv_item_channel_company_star2_2"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/star"
-          android:id="@+id/iv_item_channel_company_star2_3"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/star"
-          android:id="@+id/iv_item_channel_company_star2_4"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/star"
-          android:id="@+id/iv_item_channel_company_star2_5"/>
-
-        <TextView
-          android:layout_gravity="center_vertical"
-          android:text="5.0/5.0"
-          android:textSize="12sp"
-          android:textColor="#9b9b9b"
-          android:typeface="sans"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_item_channel_score_2"/>
-
-      </LinearLayout>
-
-    </LinearLayout>
-
-      <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"/>
 
   </LinearLayout>
 
