--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
   <color name="colorPuziPink">#fee3ec</color>
 
   <color name="noAlpha">#00000000</color>
+
+  <color name="colorAlphaGray">#66f1f1f1</color>
 </resources>
